# onto-emitter-gpl

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-ONTOLOGICAL-INTEGRITY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
config/: canonical_generation_rules.yaml  default.yaml  domain_bindings.yaml  ethical_rules.yaml  hardware_and_license_policy.yaml  onto144_bindings.yaml
data/: config.md  incubation_data.md  readme.md
data/training/: incubation_training_scheme.md
deployment/: README.md
deployment/ci-cd/: github-action-deploy.yml
deployment/docker/: Dockerfile.txt  docker-compose.yml  recommendations.txt
deployment/env/: env.example
deployment/kubernetes/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
deployment/scripts/: build.sh  deploy.sh  healthcheck.py
docs/: Ontological_conclusion.md  Ontomind_LLM_training.md  Practical_application.md  architecture.md  canonical_writing_policy.md  docs_generated.md  literary_analysis_policy.md  onto144_integration.md  onto16_specification.md  ontocms_noema_bindings.md  recommended_list_of_works.md  self_learning_mechanism.md  vma_protocol.md
docs/examples/: canonical_emission_with_vma.json  (+2 more)
examples/: emitter_with_onto144_profile.py  human_interaction_demo.py  legal_rights_emission.py  medical_emission_demo.py
models/: README.md  ontomind.py
scripts/: bootstrap_incubation.py  generate_canonical_text.py  train_ontomind.py
specs/: canonical_text_schema.yaml  literary_degradation_signatures.yaml  onto16i-schema.json  onto16r-schema.json  vma-schema.json
(+66 files in other folders)
